--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,6 @@
 .footer {
+    display: flex;
+    justify-content: space-between;
     height: 5em;
     padding: 1em;
     background-color: #222;
