--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -4,9 +4,9 @@
     padding: 1em;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     top: 0;
-    background-color: white;
+    background-color: var(--primary);
     height: 100%;
-    transition: transform .5s;
+    transition: transform .5s, background-color .35s ease-in-out;
     transform: translateX(-13em);
 
     & h1 {
