--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ $header-height: 3em;
 
 :root {
     --primary: #fff;
-    --secondary: blueViolet;
+    --secondary: #3f51b5;
 
     --text-primary: #000;
     --text-secondary: #fff;
@@ -22,7 +22,7 @@ $header-height: 3em;
 
 [data-theme='dark'] {
     --primary: #2b2b2c;
-    --secondary: blueViolet;
+    --secondary: #3f51b5;
 
     --accent-9: #fff;
     --accent-8: #fafafa;
@@ -155,7 +155,7 @@ a {
     }
 
     & #loader {
-        transition: visibility .5s, opacity 0.5s;
+        transition: visibility .5s, opacity .5s;
         position: fixed;
         left: 50%;
         top: 0;
@@ -193,7 +193,8 @@ a {
         bottom: 50%;
         background: #000;
         color: #FFF;
-        padding: 5px;
+        padding: .5em;
+        box-shadow: rgba(0, 0, 0, .2) 0 0 12px;
         border-radius: 5px;
         opacity: 0;
         margin-bottom: .5em;
