--- a/src/components/Home/HomePage.scss
+++ b/src/components/Home/HomePage.scss
@@ -1,3 +1,6 @@
 .home {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: max-height 1s ease-in-out;
 }
