--- a/src/components/QuoteCard/QuoteCard.scss
+++ b/src/components/QuoteCard/QuoteCard.scss
@@ -69,7 +69,7 @@
         display: grid;
         place-content: center;
         padding-top: .5em;
-        color: blueviolet;
+        color: var(--secondary);
         font-size: 36px;
         font-style: normal;
         text-indent: 0;
