--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,6 +13,7 @@
     transition: margin-left .5s, width .5s;
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 
     .left {
         display: flex;
@@ -40,12 +41,7 @@
         a {
             display: flex;
             align-items: center;
-            text-decoration: none;
             font-weight: bold;
-
-            &:hover {
-                text-decoration: underline;
-            }
         }
     }
 
