--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -54,6 +54,7 @@
 
             & a {
                 display: block;
+                text-decoration: none;
             }
 
             & .active {
