--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+@import '../../sizes';
+
 #app.menu-active .header {
     width: calc(100% - 13em);
 }
@@ -30,6 +32,7 @@
         display: flex;
         margin: 0 1em;
         color: whitesmoke;
+        white-space: nowrap;
 
         h3 {
             display: flex;
@@ -41,7 +44,28 @@
         a {
             display: flex;
             align-items: center;
-            font-weight: bold;
+
+            h3 {
+                margin-left: .2em;
+                font-weight: bold;
+            }
+
+            svg {
+                display: none;
+                transition: transform .2s ease-in-out;
+                width: 1.5em;
+                height: 1.5em;
+
+                &:hover {
+                    cursor: pointer;
+                    transition: transform .1s ease-in-out;
+                    transform: scale(1.1);
+                }
+
+                &:active {
+                    transform: scale(.95);
+                }
+            }
         }
     }
 
@@ -64,11 +88,31 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: $tablet_size) {
     .header {
         &-status{
             > h3 {
                 display: none !important;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: $mobile_size) {
+    .header {
+        &-status{
+            > h3 {
+                display: none !important;
+            }
+            a {
+                h3 {
+                    display: none;
+                }
+
+                svg {
+                    display: block;
+                    align-self: center;
+                }
             }
         }
     }
