--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -8,6 +8,7 @@
     height: 100%;
     transition: transform .5s, background-color .35s ease-in-out;
     transform: translateX(-13em);
+    z-index: 2;
 
     & h1 {
         margin-top: .5em;
