Refactoring, add scrollToTopButton, Extracted components

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -8,11 +8,12 @@
         display: flex;
         justify-content: space-between;
 
-        span {
+        span.tooltip {
             position: relative;
 
             &::before {
-                max-width: 200%;
+                max-width: unset !important;
+                left: 0 !important;
             }
         }
     }
