--- a/src/App.scss
+++ b/src/App.scss
@@ -1,47 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import 'sizes';
 
-:root {
-    --primary: #fff;
-    --secondary: #3f51b5;
-
-    --text-primary: #000;
-    --text-secondary: #fff;
-
-    --link: #aaa;
-
-    --accent-0: #fff;
-    --accent-1: #fafafa;
-    --accent-2: #eaeaea;
-    --accent-3: #999999;
-    --accent-4: #888888;
-    --accent-5: #666666;
-    --accent-6: #444444;
-    --accent-7: #333333;
-    --accent-8: #111111;
-    --accent-9: #000;
-}
-
-[data-theme='dark'] {
-    --primary: #2b2b2c;
-    --secondary: #3f51b5;
-
-    --text-primary: #fff;
-    --text-secondary: #000;
-
-    --link: #aaa;
-
-    --accent-9: #fff;
-    --accent-8: #fafafa;
-    --accent-7: #eaeaea;
-    --accent-6: #999999;
-    --accent-5: #888888;
-    --accent-4: #666666;
-    --accent-3: #444444;
-    --accent-2: #333333;
-    --accent-1: #111111;
-    --accent-0: #000;
-}
+@import 'css/sizes';
+@import 'css/colors';
 
 body {
     padding: 0;
@@ -76,6 +36,8 @@ a, button.link {
     padding-top: $header-height;
     background-color: var(--primary);
     transition: background-color .35s ease-in-out;
+
+    @import "css/buttons";
 
     &.menu-active {
         & .header {
@@ -122,80 +84,7 @@ a, button.link {
         }
     }
 
-    .button {
-        transition: background-color .2s, color .2s, transform .1s;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-        text-align: center;
-        background-color: #f1f1f1;
-        color: black;
-        padding: 16px 30px;
-        border-radius: 5px;
-
-        &:hover {
-            background-color: #222;
-            color: white;
-            transform: scale(1.1);
-        }
-
-        &:active {
-            transform: scale(.98);
-        }
-    }
-
-    .svgButton {
-        transition: transform .2s ease-in-out;
-        width: 1.5em;
-        height: 1.5em;
-
-        &:hover {
-            cursor: pointer;
-            transition: transform .1s ease-in-out;
-            transform: scale(1.1);
-        }
-
-        &:active {
-            transform: scale(.95);
-        }
-    }
-
-    .tooltip {
-
-        &::before {
-            content: attr(data-tip);
-            display: inline-block;
-            position: absolute;
-            bottom: 0;
-            background: #000;
-            color: #FFF;
-            padding: .5em;
-            box-shadow: rgba(0, 0, 0, .2) 0 0 12px;
-            border-radius: 5px;
-            opacity: 0;
-            margin-bottom: .5em;
-            left: 50%;
-            transform: translateX(-50%);
-            max-width: 100%;
-            text-overflow: ellipsis;
-            transition: opacity .2s ease-in-out, bottom .5s ease-in-out;
-            overflow: hidden;
-            pointer-events: none;
-            font-size: medium;
-            z-index: 5;
-        }
-
-        &:focus::before {
-            outline: 0;
-            outline: transparent;
-        }
-
-        &:hover::before {
-            transition: opacity .5s ease-in-out, bottom .2s ease-in-out;
-            opacity: .95;
-            bottom: 100%;
-        }
-    }
+    @import 'css/tooltip';
 }
 
 @media only screen and (max-width: $mobile_size) {
@@ -225,25 +114,4 @@ a, button.link {
     }
 }
 
-::-webkit-scrollbar {
-    width: 12px;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #aaa;
-    border-radius: 1em;
-}
-
-@media (hover: none) { // Match with touch devices
-    #app {
-
-        .tooltip:hover::before { // Avoid tooltips because of stickyness on touch devices
-            opacity: 0;
-            bottom: 0;
-        }
-    }
-}
+@import 'css/scrollbar';
