--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -14,6 +14,7 @@
             &::before {
                 max-width: unset !important;
                 left: 0 !important;
+                line-height: 1.2em;
             }
         }
     }
