--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -13,7 +13,7 @@
 
             &::before {
                 max-width: unset !important;
-                left: 0 !important;
+                left: -2em !important;
                 line-height: 1.2em;
             }
         }
