--- a/src/components/Layout/Menu/Menu.scss
+++ b/src/components/Layout/Menu/Menu.scss
@@ -1,3 +1,5 @@
+@import 'src/css/sizes';
+
 .menu {
     position: fixed;
     width: 11em;
@@ -7,7 +9,7 @@
     background-color: var(--primary);
     height: 100%;
     transition: transform .5s, background-color .35s ease-in-out;
-    transform: translateX(-13em);
+    transform: translateX($menu-size);
     z-index: 2;
 
     & h1 {
