--- a/src/components/Layout/Menu/Menu.scss
+++ b/src/components/Layout/Menu/Menu.scss
@@ -9,7 +9,7 @@
     background-color: var(--primary);
     height: 100%;
     transition: transform .5s, background-color .35s ease-in-out;
-    transform: translateX($menu-size);
+    transform: translateX(-$menu-size);
     z-index: 2;
 
     & h1 {
