--- a/src/components/Pages/Home/Home.scss
+++ b/src/components/Pages/Home/Home.scss
@@ -7,6 +7,7 @@
     .top {
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         span.tooltip {
             position: relative;
