--- a/src/components/QuoteCard/QuoteCard.scss
+++ b/src/components/QuoteCard/QuoteCard.scss
@@ -4,7 +4,7 @@
     position: relative;
     border-radius: .2em;
     box-shadow: 0 0 5px rgba(0, 0, 0, .5), inset 0 0 2px rgba(0, 0, 0, .5);
-    margin: 0 auto;
+    margin: 2em auto 0;
     padding: 1em;
     max-width: 800px;
     background-color: var(--accent-2);
