Mobile responsiveness enhancements

--- a/src/App.scss
+++ b/src/App.scss
@@ -118,4 +118,10 @@ a, button.link {
     }
 }
 
+@media (hover: none) {
+    a, button.link {
+        text-decoration-color: inherit;
+    }
+}
+
 @import 'css/scrollbar';
