--- a/src/css/tooltip.scss
+++ b/src/css/tooltip.scss
@@ -1,4 +1,14 @@
 .tooltip {
+
+    &.instant:hover::before {
+        transition-delay: 0s;
+    }
+
+    &.important:hover::before {
+        opacity: .95;
+        bottom: 100%;
+    }
+
     &::before {
         content: attr(data-tip);
         display: inline-block;
